# motion_primitive_planner

./: CMakeLists.txt  README.md  package.xml
include/motion_primitives_planner/: motion_primitives_planner_node.hpp
launch/: run.launch
src/: motion_primitives_planner_node.cpp
